# tribus

./: .gitignore  Astir notebook_clean.ipynb  Benchmarking_plot.Rmd  CyTOF_notebook_astir.ipynb  Fast_masking_v2_colors_fixed.ipynb  NKI_notebook.ipynb  README.md  STELLAR_benchmarking.ipynb  STELLAR_notebook.ipynb  STELLAR_notebook_astir.ipynb  TMA_notebook.ipynb  Tribus_dev_som.ipynb  Tribus_napari_full_widget.ipynb  Tribus_run.ipynb  check_som_cluster.ipynb  minisom_clustering.ipynb  minisom_clustering_pre&post.ipynb  napari_requirements.txt  setup.cfg  setup.py  test-dev-notebook.ipynb  tribus_environment.yml  tribus_req.txt
R/: cellTypeCaller.R  editedFlowSOMQueryStarPlot.R  exampleCellTypeCalling.R  userCellTypes.R
R/report_pdf/: .Rhistory  2b_cell_type_caller.R  Readme.md  ang_gates.r  cell_type_calling.R  gates.R  plottings.R  qc_funcs.R  qc_functions.R  qc_functions2.R  readme.txt  report.md
docs/source/: cell_type_descriptions.xlsx  conf.py  mock_data.csv  mock_labels.csv
notebooks/: Benchmarking basic.ipynb  Build the tree.ipynb
notebooks/in-progress/: test_outlier_detection.ipynb  test_paga.ipynb  test_som_viz.ipynb
test-cases/: nki-tma-cycif.ipynb  sciset
tribus/: GMM.py  __init__.py  __main__.py  classify.py  label_logic.py  napari_for_tribus.py  process_data.py  tribus.py  utils.py  visualization.py
tribus/Tribus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tribus/gate_logic/: gate_logic_functions.py
tribus/report/: .gitignore  README.md  (+2 more)
tribviz/: .gitignore  data_to_json.R  produce_report.R  qc_functions.R  report.Rmd
(+23 files in other folders)
