[metadata]
name = Tribus
version = 0.0.1
description = 'Cell type based analysis of multiplexed imaging data'
long_description='Tribus is a lightweight package to help analysis of multiplexed imaging data, such as cyclic immunofluorescence imaging (CyCIF). Its core functionality lies on automatic cell type assignment of large datasets via hiarchical categorization based on user-given prior knowledge.'
author = 'Julia Casado, Angela Szabo, Miikka Kilkkila'
author_email = 'julia.casado@helsinki.fi'
home-page = 'https://github.com/farkkilab/tribus'
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Natural Language :: English

[options]
python_requires = >=3.8
install_requires =
    numpy
    matplotlib >=3.1.2
    networkx >=2.4
    scipy >=1.4.1
    scikit-image
    scikit-learn >=0.21.1
    pandas
    openpyxl
    sklearn_som
    xlsxwriter
    umap-learn
    seaborn
    matplotlib
packages = find:

[options.entry_points]
console_scripts =
    tribus = tribus.tribus:main

[options.packages.find]
where=tribus
